src/test/ui/deprecation/deprecation-in-staged-api.stderr
error: `#[deprecated]` cannot be used in staged API
  --> $DIR/deprecation-in-staged-api.rs:3:1
   |
LL | #[deprecated]
   | ^^^^^^^^^^^^^ use `#[dustc_deprecated]` instead
LL | fn main() {}
   | ------------

error: aborting due to previous error

